--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 # WRIBBON main project.
-cmake_minimim_required (VERSION 3.0.0)
+cmake_minimum_required (VERSION 3.0.0)
 
 add_subdirectory (wribbon)
-add_subdirectory (tests)
-add_subdirectory (doc)
+add_subdirectory (samples)
 
