Build seems to be ok.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 # WRIBBON main project.
 cmake_minimum_required (VERSION 3.0.0)
 
+SET(QT_DIR "" CACHE STRING "Path containing Qt.")
+
 add_subdirectory (wribbon)
 add_subdirectory (samples)
 
